Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9969

jom: Error C2440 when building JOM from sources.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 2.8.1
    • Qt Creator 2.8.0
    • Jom
    • None
    • 98f8cb6e90a80221046053bd4511b15726dce91d

    Description

      JOM sources: 9f4a104f7145fd122c2b046e15b89478d9117274
      Compiller: MSVS 2012 (Express Edition)
      QT: 5.1 win64

      process.cpp
      230        QMap<QString,QString>::ConstIterator it = copy.constBegin(),
      231                                             end = copy.constEnd();
      
      C:\jom\src\jomlib\process.cpp:230: ошибка: C2440: инициализация: невозможно преобразовать "QMap<Key,T>::const_iterator" в "QMap<Key,T>::const_iterator"
      with
      [
          Key=NMakeFile::ProcessEnvironmentKey,
          T=QString
      ]
      and
      [
          Key=QString,
          T=QString
      ]
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            kolod Alexandr Kolodkin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes