compile fix for Qt 5

Use the correct iterator types for ProcessEnvironment.

Task-number: QTCREATORBUG-9969

Change-Id: Ia46ccf5b38f59c48a7f870e811b06a684d87ff0b
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>